syntax = "proto3";
package pb;
option go_package = "git.sr.ht/~ionous/pb";

import "options.proto";

/**
 * note: most literal values will be specified with primitives which the parser will expand.
 */

message BoolValue {
	bool _value = 1;
	option (if).desc = "Specify an explicit true or false value.";
}

message NumValue {
	double _value = 1;
	option (if).desc = "Specify some particular number.";
}

message TextValue {
	string _value = 1;
	option (if).desc = "Specify a small bit of text.";
};

message HereValue {
	string _value = 1;
	option (if).desc = "Specify one or more lines of text.";
};

message NumValues {
	repeated string _values = 1;
	option (if).desc = "Specify one or more numbers.";
};

message TextValues {
	repeated string _values = 1;
	option (if).desc = "Specify one or more small bits of text.";
};
